# CubicSplineClass

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  CubicSpline.h  LICENSE.md  README.md  cubicSpline.h  cubicSpline.hpp  cubicSpline_nonC++11.h  cubicSpline_nonC++11.hpp  example.cpp  main.cpp
plotTest/: data.out  plot.py  test.out
